설정 변경, 기능 추가
보안 설정 변경
게시글 작성 기능 추가